--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yuva-portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/Yuvaraj7117/Yuvafolio.git",
+  "homepage": "https://github.com/Yuvaraj7117/Portfolio63.git",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -18,7 +18,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.11",
     "typewriter-effect": "^2.19.0",
